maintenance page fix

--- a/haproxy/template/maintenance.html
+++ b/haproxy/template/maintenance.html
@@ -17,8 +17,7 @@ footer{font-size:x-small;margin-top:auto;margin-bottom:20px}.pt{padding-top:30vh
 	<body>
 		<h3 class="pt">Under maintenance. Please try again soon!</h3>
 		<footer>
-			<img src="/img/footerlogo.png">
-			<p>Security and Performance by <a href="https://BasedFlare.com">BasedFlare</a></p>
+			<img src="/.basedflare/img/footerlogo.png">
 			<p>Security and Performance by <a href="https://basedflare.com">BasedFlare</a></p>
 			<p>Node: <code>%[env(RAY_ID)]</code></p>
 		</footer>
