Image on bot-check adn css tweak, change footers to basedflare link in template, maintenance, bot-check

--- a/haproxy/template/maintenance.html
+++ b/haproxy/template/maintenance.html
@@ -19,7 +19,7 @@ footer{font-size:x-small;margin-top:auto;padding:10px;text-align:center;border-t
 		<h3 class="pt">Under maintenance. Please try again soon!</h3>
 		<footer>
 			<p>Node: <code>%[env(RAY_ID)]</code></p>
-			<p>Performance & security by <a href="https://gitgud.io/fatchan/haproxy-protection/">haproxy-protection</a></p>
+			<p>Performance & security by <a href="https://basedflare.com" rel="noreferrer noopener" target="_blank">BasedFlare</a></p>
 		</footer>
 	</body>
 </html>
